vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "main"
  }
}

# SSH connection 
resource "aws_security_group" "SSH_Security-group" {
  name        = "SSH_Security-group"
  description = "SSH connect for vpc"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.main.cidr_block]
  }


  tags = {
    Name = "Security-group-SSH"
  }
}
